# xdr-serde

./: Cargo.toml  LICENSE  README.md
src/: de.rs  error.rs  fixed_opaque.rs  lib.rs  ser.rs
tests/: xdr_tests.rs
